gitops/system/base/envoy-gateway/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: envoy-gateway-system
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
