gitops/system/base/envoy-gateway/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: envoy-proxy
  namespace: envoy-gateway-system
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: envoy
  ingress:
    # External traffic via Scaleway LoadBalancer (PROXY protocol)
    - fromEntities:
        - world
      toPorts:
        - ports:
            - port: "10443"
              protocol: TCP
  egress:
    # DNS
    - toEndpoints:
        - matchLabels:
            k8s-app: kube-dns
            k8s:io.kubernetes.pod.namespace: kube-system
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    # Backend services (all in-cluster pods routed via HTTPRoutes)
    - toEntities:
        - cluster
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "3000"
              protocol: TCP
            - port: "8000"
              protocol: TCP
            - port: "8008"
              protocol: TCP
            - port: "8080"
              protocol: TCP
            - port: "9080"
              protocol: TCP
            - port: "9090"
              protocol: TCP
    # xDS config stream from Envoy Gateway controller
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: gateway-helm
      toPorts:
        - ports:
            - port: "18000"
              protocol: TCP
            - port: "18001"
              protocol: TCP
    # Google OIDC (token validation, JWKS fetch - CDN IPs, can't pin)
    - toCIDRSet:
        - cidr: "0.0.0.0/0"
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: envoy-gateway-controller
  namespace: envoy-gateway-system
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: gateway-helm
  ingress:
    # xDS config stream from Envoy proxy
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: envoy
      toPorts:
        - ports:
            - port: "18000"
              protocol: TCP
            - port: "18001"
              protocol: TCP
  egress:
    # DNS
    - toEndpoints:
        - matchLabels:
            k8s-app: kube-dns
            k8s:io.kubernetes.pod.namespace: kube-system
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    # K8s API server (watches Gateway API resources)
    - toEntities:
        - kube-apiserver
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
    # Configures the Envoy proxy via xDS
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: envoy
      toPorts:
        - ports:
            - port: "19001"
              protocol: TCP
    # OIDC provider discovery (Google openid-configuration, JWKS)
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
